# Citation_graph

./: CMakeLists.txt  Makefile  README.md  citation_graph.h  citation_graph_example.cc
src/: citation_graph.h  main.cpp  test.cc
test/: citation_graph_memory_testing.h  citation_graph_unit_tests.cc  debug_test.cc  elo.cpp  test.cc
zadanie/: citation_graph_example.cc  graf_cytowan_tresc.txt
